<resources>
    <string name="app_name">ScrollViewYou3</string>
    <string name="create_account">Create account</string>
    <string name="alma_lawson_example_com">alma.lawson@example.com</string>
    <string name="john_cooper">John cooper</string>
    <string name="password">Password(minimum 6 characters)</string>
    <string name="sign_up">Sign up</string>
    <string name="use_phone_number">USE PHONE NUMBER</string>
    <string name="or">or</string>
    <string name="continue_with_facebook">CONTINUE WITH FACEBOOK</string>
    <string name="continue_with_google">CONTINUE WITH GOOGLE</string>
</resources>